@@ -2,6 +2,9 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.9'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.10'
+
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
 
 group = 'io.siha'
@@ -9,9 +12,33 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 configurations {
+    asciidoctorExtensions
+
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+asciidoctor {
+    inProcess = org.asciidoctor.gradle.base.process.ProcessMode.JAVA_EXEC
+    forkOptions {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED")
+    }
+
+    configurations 'asciidoctorExtensions'
+    inputs.dir file("build/generated-snippets")
+    dependsOn test
+}
+
+task copyDocument(type: Copy) {
+    dependsOn asciidoctor
+
+    from file("build/docs/asciidoc/")
+    into file("src/main/resources/static/docs")
+}
+
+build {
+    dependsOn copyDocument
 }
 
 repositories {
@@ -29,12 +56,17 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     runtimeOnly 'com.h2database:h2'
+
+    asciidoctorExtensions "org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.6.RELEASE"
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
     testImplementation("io.kotest:kotest-runner-junit5-jvm:${kotestVersion}")
     testImplementation("io.kotest:kotest-assertions-core:${kotestVersion}")
